DuPont DevSB/src/objects/Material__c.object
<CustomObject>
    <description>Custom object to capture or track materials.  May be used for products as well as substances (i.e. REACH);   Typically used for product lists related to an Account or Opportunity  (i.e. partner products, developmental products or confidential products) when a &quot;secure&quot; product object is required; organization wide security default for this custom object is set to &quot;Private&quot; instead of &apos;Public Read/Write&quot; as in the standard &apos;Products&apos; object.</description>
    <fields>
        <fullName>Active_Ingredient__c</fullName>
        <label>Active Ingredient</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acetamiprid</fullName>
                </value>
                <value>
                    <fullName>Acetochlor</fullName>
                </value>
                <value>
                    <fullName>Alkylene Glycol (Polymer Based)</fullName>
                </value>
                <value>
                    <fullName>Aminocyclopyrachlor</fullName>
                </value>
                <value>
                    <fullName>Aminomethanamide</fullName>
                </value>
                <value>
                    <fullName>Atrazine</fullName>
                </value>
                <value>
                    <fullName>Azafenidin</fullName>
                </value>
                <value>
                    <fullName>Bacillus Thuringiensis</fullName>
                </value>
                <value>
                    <fullName>Benomyl</fullName>
                </value>
                <value>
                    <fullName>Bensulfuron Methyl</fullName>
                </value>
                <value>
                    <fullName>Bromacil</fullName>
                </value>
                <value>
                    <fullName>Chlorantraniliprole</fullName>
                </value>
                <value>
                    <fullName>Chlorethoxyfos</fullName>
                </value>
                <value>
                    <fullName>Chlorimuron Ethyl</fullName>
                </value>
                <value>
                    <fullName>Chlorothalonil</fullName>
                </value>
                <value>
                    <fullName>Chlorsulfuron</fullName>
                </value>
                <value>
                    <fullName>Chlorsulfuron Methyl</fullName>
                </value>
                <value>
                    <fullName>Cinmethylin</fullName>
                </value>
                <value>
                    <fullName>Clopyralid</fullName>
                </value>
                <value>
                    <fullName>Copper Hydroxide</fullName>
                </value>
                <value>
                    <fullName>Cyanazine</fullName>
                </value>
                <value>
                    <fullName>Cyantraniliprole</fullName>
                </value>
                <value>
                    <fullName>Cymoxanil</fullName>
                </value>
                <value>
                    <fullName>Cyproconazole</fullName>
                </value>
                <value>
                    <fullName>Dicamba</fullName>
                </value>
                <value>
                    <fullName>Dicrotophos</fullName>
                </value>
                <value>
                    <fullName>Diglycolamine salt of dicamba</fullName>
                </value>
                <value>
                    <fullName>Dimethenamid</fullName>
                </value>
                <value>
                    <fullName>Diuron</fullName>
                </value>
                <value>
                    <fullName>Esfenvalerate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercialisation_Stage__c</fullName>
        <label>Commercialisation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>Production Trial</fullName>
                </value>
                <value>
                    <fullName>Scale Up</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Phasing Out</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Internal Product</fullName>
                </value>
                <value>
                    <fullName>Special Order</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <label>Country Of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda Islands</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country where product is sold.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BORNEO</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_rtf__c</fullName>
        <description>Rich text field to capture details and image of a Material</description>
        <inlineHelpText>Rich text field to capture details and image of a Material</inlineHelpText>
        <label>Description_</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dest_Received__c</fullName>
        <description>The date &amp; time when data was transferred and succesfully updated/created into a destination system</description>
        <inlineHelpText>The date &amp; time when data was transferred and succesfully updated/created into a destination system</inlineHelpText>
        <label>Dest Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dest_Updated__c</fullName>
        <description>This field is used to determine if a backend system is updated with the most recent SF data. Everytime data is written to backend the field Dest_Received is updated with a timesamp. If the system field LastModifedDate is bigger than Dest_Received the object data needs to transferred to the backend system. The difference needs to be bigger than 1 second since LastModifiedDate is also updated when Dest_Received is written back.</description>
        <formula>((LastModifiedDate-Dest_Received__c)*84600)&lt;1 &amp;&amp; NOT(ISBLANK(Dest_Received__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the backend system has been updated with the current data.</inlineHelpText>
        <label>Dest Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Base_UOM__c</fullName>
        <description>Describes the lowest level unit of measure that would be reasonably handled. This is directly linked to the profit center UOM for materials with a profit center.</description>
        <label>Base UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Configurable_Material__c</fullName>
        <description>Cross-Plant Configurable Material from ERP system (MARA-SATNR)</description>
        <inlineHelpText>Cross-Plant Configurable Material from ERP system</inlineHelpText>
        <label>Configurable Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this material is flagged for deletion</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Chain_Status__c</fullName>
        <description>Distribution-chain-specific material status from ERP system (MVKE-VMSTA)</description>
        <inlineHelpText>Distribution-chain-specific material status from ERP system</inlineHelpText>
        <label>Distribution Chain Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel_Code__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this material is configurable</description>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Code__c</fullName>
        <description>Global Material Code(GMC) of the product/material as defined in the Product Master in SAP.</description>
        <label>ERP Material Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_General_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the record that contains the SAP general data record for this material, which can be shared across sales orgs.</description>
        <label>Material - General Data</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_1_Code__c</fullName>
        <label>Material Group 1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_1__c</fullName>
        <label>Material Group 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_2_Code__c</fullName>
        <label>Material Group 2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_2__c</fullName>
        <label>Material Group 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_3_Code__c</fullName>
        <label>Material Group 3 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_3__c</fullName>
        <description>Enterprise Resource Planning (ERP) Product End Use data from SAP_BW. Defines the end use of a DuPont product as defined by the business unit.</description>
        <label>Material Group 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_Code__c</fullName>
        <label>Material Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group__c</fullName>
        <label>Material Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Order_Block_Code__c</fullName>
        <description>Indicates if further sales order processing is blocked for this material.</description>
        <label>Material Order Block Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Order_Block__c</fullName>
        <description>Indicates if further sales order processing is blocked for this material.</description>
        <label>Material Order Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Price_Group_Code__c</fullName>
        <label>Material Price Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Price_Group__c</fullName>
        <label>Material Price Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Type__c</fullName>
        <description>Material Type from the ERP system (MARA-MTART)</description>
        <inlineHelpText>Material Type from the ERP system</inlineHelpText>
        <label>ERP Material Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Owning_Org__c</fullName>
        <description>Owning Organization (typically FRB5 in SAP_CEDW)</description>
        <label>ERP Owning Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_PH_IsProduct__c</fullName>
        <formula>if(ERP_PH_Level__c=7,true,false)</formula>
        <label>Is a Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_PH_LastCode__c</fullName>
        <formula>if (RecordType.Name=&quot;NH Material&quot;, if(not isBlank( ERP_Product_Hierarchy_Level_7_Code__c ), ERP_Product_Hierarchy_Level_7_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_6_Code__c ), ERP_Product_Hierarchy_Level_6_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_5_Code__c ), ERP_Product_Hierarchy_Level_5_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_4_Code__c ), ERP_Product_Hierarchy_Level_4_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_3_Code__c ), ERP_Product_Hierarchy_Level_3_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_2_Code__c ), ERP_Product_Hierarchy_Level_2_Code__c,
ERP_Product_Hierarchy_Level_1_Code__c)))))),
if(not isBlank( ERP_Product_Hierarchy_Level_1_Code__c ), ERP_Product_Hierarchy_Level_1_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_2_Code__c ), ERP_Product_Hierarchy_Level_2_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_3_Code__c ), ERP_Product_Hierarchy_Level_3_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_4_Code__c ), ERP_Product_Hierarchy_Level_4_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_5_Code__c ), ERP_Product_Hierarchy_Level_5_Code__c,
if(not isBlank( ERP_Product_Hierarchy_Level_6_Code__c ), ERP_Product_Hierarchy_Level_6_Code__c,
ERP_Product_Hierarchy_Level_7_Code__c)))))))</formula>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_PH_Level__c</fullName>
        <formula>if (RecordType.Name=&quot;NH Material&quot;,
if(not(isBlank(  ERP_Product_Hierarchy_Level_7__c  )), 1,0)
+ if(not(isBlank( ERP_Product_Hierarchy_Level_6__c )), 1,0)
+ if(not(isBlank( ERP_Product_Hierarchy_Level_5__c )), 1,0)
+ if(not(isBlank( ERP_Product_Hierarchy_Level_4__c )), 1,0)
+ if(not(isBlank( ERP_Product_Hierarchy_Level_3__c )), 1,0)
+ if(not(isBlank( ERP_Product_Hierarchy_Level_2__c )), 1,0)
+ if(not(isBlank( ERP_Product_Hierarchy_Level_1__c )), 1,0),
7- if(isBlank( ERP_Product_Hierarchy_Level_6__c ), 1,0)
- if(isBlank( ERP_Product_Hierarchy_Level_5__c ), 1,0)
- if(isBlank( ERP_Product_Hierarchy_Level_4__c ), 1,0)
- if(isBlank( ERP_Product_Hierarchy_Level_3__c ), 1,0)
- if(isBlank( ERP_Product_Hierarchy_Level_2__c ), 1,0)
- if(isBlank( ERP_Product_Hierarchy_Level_1__c ), 1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Family__c</fullName>
        <description>Product Family from CEDW_SAP (derived from SAP Product Hierarchy)</description>
        <label>ERP Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Code__c</fullName>
        <description>Concatenation of the 9 Product Hierarchy Levels, always an 18-character string.</description>
        <label>Product Hierarchy Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_1_Code__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_1__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_2_Code__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_2__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_3_Code__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH3 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_3__c</fullName>
        <label>PH3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_10_Code__c</fullName>
        <label>Profit Center 10 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_10__c</fullName>
        <label>Profit Center 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_4_Code__c</fullName>
        <label>Profit Center 4 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_4__c</fullName>
        <label>Profit Center 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_5_Code__c</fullName>
        <label>Profit Center 5 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_5__c</fullName>
        <label>Profit Center 5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_Code__c</fullName>
        <description>ERP (Enterprise Resource Planning) Code for the business unit (example Crop, MCM, Refinish,etc.).</description>
        <label>Profit Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center__c</fullName>
        <description>ERP (Enterprise Resource Planning) (Financial Reporting Business) Name</description>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Relative_Maturity__c</fullName>
        <description>A designation utilized to express time required to reach crop maturity.</description>
        <label>Relative Maturity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org_Code__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org. Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_UOM__c</fullName>
        <label>Sales UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Segment__c</fullName>
        <description>Genetic traits associated with the crop management of a product.</description>
        <label>Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Source_Cluster__c</fullName>
        <description>Specific SAP box or cluster where the data</description>
        <label>Source Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Timestamp__c</fullName>
        <label>ERP Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ERP_Treatment_Text__c</fullName>
        <description>Name of the treatment applied to the seed.</description>
        <label>Treatment Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Variant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Variant material flag from ERP system (MARA-XLTYF)</description>
        <inlineHelpText>Variant material flag from ERP system</inlineHelpText>
        <label>Variant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_X_Chain_Distribution_Status__c</fullName>
        <description>Cross-distribution-chain material status from the ERP system (MARA-MSTAV)</description>
        <inlineHelpText>Cross-distribution-chain material status from the ERP system</inlineHelpText>
        <label>X-Chain Distribution Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_X_Plant_Status__c</fullName>
        <description>X-Plant Material Status from the ERP system (MARA-MSTAE)</description>
        <inlineHelpText>X-Plant Material Status from the ERP system</inlineHelpText>
        <label>X-Plant Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalProduct_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Product ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the  Source Cluster + Material Cod + Sales Org Code + Distribution Channel Code + Division Code to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Comments__c</fullName>
        <label>Federal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Federal_Establishment_Nb__c</fullName>
        <label>Federal Establishment Nb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Registration_Nb__c</fullName>
        <label>Federal Registration Nb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Registration_status__c</fullName>
        <label>Federal Registration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Restricted_Use_Product__c</fullName>
        <label>Federal Restricted Use Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>